--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lib": "ng build --prod angular2-image-gallery && cp misc/convert.js dist/angular2-image-gallery/ && cp README.md dist/angular2-image-gallery/"
+    "lib": "ng build --prod angular2-image-gallery && cp misc/convert.js dist/angular2-image-gallery/ && cp README.md dist/angular2-image-gallery/ && cd dist/angular2-image-gallery/ && npm pack"
   },
   "private": true,
   "dependencies": {
@@ -25,16 +25,17 @@
     "core-js": "^2.5.4",
     "gm": "^1.23.1",
     "hammerjs": "^2.0.8",
+    "lib": "^4.0.2",
     "ng5-slider": "^1.1.12",
     "onecolor": "^3.1.0",
     "rxjs": "^6.3.3",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.11.4",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular/cli": "~7.1.4",
-    "@angular/compiler-cli": "^7.1.4",
+    "@angular/compiler-cli": "^7.2.13",
     "@angular/language-service": "^7.1.4",
     "@types/jasmine": "~2.8.6",
     "@types/jasminewd2": "~2.0.3",
