--- a/projects/angular2-image-gallery/package.json
+++ b/projects/angular2-image-gallery/package.json
@@ -25,7 +25,8 @@
     "@angular/core": "^7.0.0-rc.0 || ^7.0.0",
     "hammerjs": "^2.0.8",
     "onecolor": "^3.0.5",
-    "gm": "^1.23.1"
+    "gm": "^1.23.1",
+    "rxjs": "^6.3.3"
   },
   "keywords": [
     "angular2",
